# basinator

./: CMakeLists.txt  CMakeLists_dello.txt  Study1.hdf  basin.blend  basin_generator.cpp  basin_generator.hpp  basin_generator.kdev4  build_command  domain.cpp  domain.hpp  exporter.cpp  exporter.hpp  from_paraview.x3d  geometry.cpp  interfaces.mesh  interfaces_oriented.off  main.cpp  mesher.msh  patcher.cpp  patcher.hpp  prova.msh  qsub_compile.sub  qsub_launch.sub  reconstructurer.cpp  reconstructurer.hpp  sharpner.cpp  sharpner.hpp  tags
.gitignore/: .gitignore
data/: cube_points.off  depth.txt  lesssimple.off  out2.off
data/converter/: Makefile  basin  ho.x3db  horizon_0.off  horizon_1.off  horizon_2.off  horizon_3.off  horizon_4.off  orizon_generator.cpp
data/converter/importer_4_blender/: h1_recon.x3d  h2_recon.x3d  lateral.x3d  points.pvsm  total.pvsm
data/converter/scene4blend/: meshing.blend  pressure.pvsm
data/converter/slice1/: horizon_0.off  horizon_1.off  horizon_2.off  horizon_3.off  horizon_4.off
data/converter/ufficial/: horizon_0.off  horizon_1.off  horizon_3.off  horizon_4.off
